--- a/index.html
+++ b/index.html
@@ -241,11 +241,16 @@
                 <!-- <a href="./navigation/train.html" class="container__service__link">Xem thêm</a> -->
             </div>
             <!-- LE VAN TIEN -->
-            <div class="feedback">
-                <h1>CƠ SỞ VẬT CHẤT</h1>
-                <h2>GYMZ dùng toàn bộ nỗ lực để giúp bạn yêu cơ thể mình hơn, đều đặn mỗi ngày.</h2>
-            </div>
+            
             <div class="container__shop">
+                <div class="feedback">
+                    <h1>CƠ SỞ VẬT CHẤT</h1>
+                    <h2>GYMZ có cơ sở vật chất hiện đại với phòng tập rộng rãi và trang 
+                        thiết bị tập luyện đa dạng như máy cardio, 
+                        tạ và máy tập cơ bụng. Không gian yên tĩnh, ánh sáng tự nhiên, 
+                        hệ thống điều hòa làm tăng sự thoải mái. 
+                        Có khu vực nướng, phòng thay đồ và nhân viên chuyên nghiệp.</h2>
+                </div>
                 <div class="container__images">
                     <div class="image__item">
                         <img src="https://watermark.lovepik.com/photo/20211121/large/lovepik-men-and-women-practise-strength-in-the-gym-picture_500595712.jpg"
@@ -295,7 +300,7 @@
                                 alt="before after">
                         </div>
                     </div>
-                    <div class="change__box">
+                    <div class="change__box" style=" flex-direction: row-reverse;">
                         <div class="change__box__text">
                             <h2>TÍNH BMI (CHỈ SỐ KHỐI CƠ THỂ)</h2>
                             <p>Đo chỉ số BMI tại CITIGYM để đánh giá mức độ béo, gầy hay cân nặng lý tưởng của bạn
