--- a/navigation/chatbox.html
+++ b/navigation/chatbox.html
@@ -251,7 +251,7 @@
             </div>
             <div class="modal__body__box login-box">
                 <p>Đăng nhập tài khoản</p>
-                <form>
+                <div>
                     <div class="user-box">
                         <input class="login-email" required="" name="" type="text">
                         <label>Email</label>
@@ -267,12 +267,12 @@
                         <span></span>
                         Đăng nhập
                     </button>
-                </form>
+                </div>
                 <p>Chưa có tài khoản? <span class="a2 link-create-account">Đăng ký!</span></p>
             </div>
             <div class="modal__body__box create-account-box">
                 <p>Đăng nhập tài khoản</p>
-                <form>
+                <div>
                     <div class="user-box">
                         <input class="login-name" required="" name="" type="text">
                         <label>Họ và tên</label>
@@ -296,13 +296,13 @@
                         <span></span>
                         Đăng ký
                     </button>
-                </form>
+                </div>
                 <p>Đã có tài khoản? <span class="a2 link-login">Đăng nhập!</span></p>
             </div>
             
             <div class="modal__body__box register-cart">
                 <!-- <p>Đăng nhập tài khoản</p> -->
-                <form>
+                <div>
                     <div class="user-box">
                         <input class="login-email" required="" name="" type="text">
                         <label>Họ và tên</label>
@@ -374,7 +374,7 @@
                         <span></span>
                         Đăng ký
                     </button>
-                </form>
+                </div>
             </div>
         </div>
     </div>
