--- a/navigation/promotion.html
+++ b/navigation/promotion.html
@@ -592,7 +592,7 @@
     <!-- <script src="./index.js"></script> -->
     <script type="module" src="../navigation_javascript/loadData.js"></script>
     <script src="../navigation_javascript/menuv2.js"></script>
-    <script type="module" src="../navigation_javascript/promotion.js"></script>
+    <script src="../navigation_javascript/promotion.js"></script>
     <!-- <script src="../navigation_javascript/menu.js"></script> -->
 </body>
 
