--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     <ul>
                         <li><a class="header__inner__navigation__sevice" href="./index.html"><span>TRANG CHỦ</span></a>
                         </li>
-                        <li><a class="header__inner__navigation__sevice" href="./navigation/card.html">THẺ HỘI VIÊN</a>
+                        <li><a class="header__inner__navigation__sevice" href="./navigation/chatbox.html">CHAT ONLINE</a>
                         </li>
                         <li>
                             <div class="dropdown">
@@ -55,11 +55,10 @@
                                 <div class="containt">
                                     <a href="./navigation/train.html">HUẤN LUYỆN VIÊN</a>
                                     <a href="./navigation/shop.html">CỬA HÀNG WHEY</a>
-                                    <a href="./navigation/chatbox.html">CHAT ONLINE</a>
                                 </div>
                             </div>
                         </li>
-                        <li><a class="header__inner__navigation__sevice" href="./navigation/chatbox.html">CHAT ONLINE</a></li>
+                        <li><a class="header__inner__navigation__sevice" href="./navigation/card.html">THẺ HỘI VIÊN</a></li>
                     </ul>
                 </div>
                 <div class="header__inner__try">
