--- a/navigation/chatbox.html
+++ b/navigation/chatbox.html
@@ -46,7 +46,7 @@
                 <div class="header__inner__navigation">
                     <ul>
                         <li><a class="header__inner__navigation__sevice" href="../index.html">TRANG CHỦ</a></li>
-                        <li><a class="header__inner__navigation__sevice" href="./card.html">THẺ HỘI VIÊN</a></li>
+                        <li><a class="header__inner__navigation__sevice" href="./chatbox.html"><span>CHAT ONLINE</span></a></li>
                         <li>
                             <div class="dropdown">
                                 <a class="header__inner__navigation__sevice" href="#" onclick="yourFunction(event)">
@@ -58,7 +58,7 @@
                               </div>
                             </div>
                         </li>
-                        <li><a class="header__inner__navigation__sevice" href="./chatbox.html">CHAT ONLINE</a></li>
+                        <li><a class="header__inner__navigation__sevice" href="./card.html">THẺ HỘI VIÊN</a></li>
                     </ul>
                 </div>
                 <div class="header__inner__try">
