--- a/navigation/train.html
+++ b/navigation/train.html
@@ -40,24 +40,24 @@
                 <div class="header__inner__navigation">
                     <ul>
                         <li><a class="header__inner__navigation__sevice" href="../index.html">TRANG CHỦ</a></li>
-                        <li><a class="header__inner__navigation__sevice" href="./card.html">CHAT ONLINE</a></li>
+                        <li><a class="header__inner__navigation__sevice" href="./chatbox.html">CHAT ONLINE</a></li>
                         <li>
                             <div class="dropdown">
                                 <a class="header__inner__navigation__sevice" href="#" onclick="yourFunction(event)">
-                                    DỊCH VỤ<m><i class='bx bxs-right-arrow'></i></m>
+                                    <span>DỊCH VỤ</span><m><i class='bx bxs-right-arrow'></i></m>
                                 </a>
                                 <div class="containt">
-                                    <a href="./train.html">HUẤN LUYỆN VIÊN</a>
+                                    <a href="./train.html"><span>HUẤN LUYỆN VIÊN</span></a>
                                     <a href="./shop.html">CỬA HÀNG WHEY</a>
                               </div>
                             </div>
                         </li>
-                        <li><a class="header__inner__navigation__sevice" href="./chatbox.html">THẺ HỘI VIÊN</a></li>
+                        <li><a class="header__inner__navigation__sevice" href="./card.html">THẺ HỘI VIÊN</a></li>
                     </ul>
                 </div>
                 <div class="header__inner__try">
                     <ul>
-                        <li><a href="./promotion.html">KHUYẾN MÃI NÈ</a></li>
+                        <li><a href="./promotion.html">KHUYẾN MÃI</a></li>
                     </ul>
                 </div>
                 <div class="header__inner__menu">
