fix all navigation

--- a/navigation/shop.html
+++ b/navigation/shop.html
@@ -64,7 +64,7 @@
                 </div>
                 <div class="header__inner__try">
                     <ul>
-                        <li><a href="./promotion.html">KHUYẾN MÃI NÈ</a></li>
+                        <li><a href="./promotion.html">KHUYẾN MÃI</a></li>
                     </ul>
                 </div>
                 <div class="header__inner__menu">
@@ -96,10 +96,10 @@
                                     TRANG CHỦ
                                 </span>
                             </a>
-                            <a class="content__inner" href="./forum.html">
+                            <a class="content__inner" href="./chatbox.html">
                                 <i class='bx bx-world'></i>
                                 <span class="noidung__text1">
-                                    DIỄN ĐÀN
+                                    CHAT ONLINE
                                 </span>
                             </a>
                             <div class="submenu" href="#" onclick="toggleNoidung222(event)">
@@ -113,19 +113,12 @@
                                     <a class="content__inner" href="./card.html"> THẺ HỘI VIÊN</a>
                                     <a class="content__inner" href="./train.html"> HUẤN LUYỆN VIÊN</a>
                                     <a class="content__inner" href="./shop.html"> CỬA HÀNG WHEY</a>
-                                    <a class="content__inner" href="./chatbox.html"> CHAT ONLINE</a>
                                 </div>
                             </div>
                             <a class="content__inner" href="./promotion.html">
                                 <i class='bx bxs-purchase-tag'></i>
                                 <span class="noidung__text1">
                                     KHUYẾN MÃI
-                                </span>
-                            </a>
-                            <a class="content__inner" href="#">
-                                <i class='bx bx-code-alt'></i>
-                                <span class="noidung__text1">
-                                    TẬP THỬ MIỄN PHÍ
                                 </span>
                             </a>
                         </div>
