--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <link rel="stylesheet" href="./css/footer.css">
     <link rel="stylesheet" href="./css/tien.css">
     <link rel="stylesheet" href="./css/tu.css">
-    <link rel="stylesheet" href="./css/van.css">
+    <!-- <link rel="stylesheet" href="./css/van.css"> -->
     <link rel="stylesheet" href="./css/quyen.css">
     <link rel="stylesheet" href="./css/base.css">
     <link rel="stylesheet" href="./navigation_css/toast.css">
@@ -120,10 +120,10 @@
                                     TRANG CHỦ
                                 </span>
                             </a>
-                            <a class="content__inner" href="./navigation/forum.html">
+                            <a class="content__inner" href="./navigation/chatbox.html">
                                 <i class='bx bx-world'></i>
                                 <span class="noidung__text1">
-                                    DIỄN ĐÀN
+                                    CHAT ONLINE
                                 </span>
                             </a>
                             <div class="submenu" href="#" onclick="toggleNoidung222(event)">
@@ -142,9 +142,6 @@
                                     </a>
                                     <a class="content__inner" href="./navigation/shop.html">
                                         CỬA HÀNG WHEY
-                                    </a>
-                                    <a class="content__inner" href="./navigation/chatbox.html">
-                                        CHAT ONLINE
                                     </a>
                                 </div>
                             </div>
