--- a/navigation/card.html
+++ b/navigation/card.html
@@ -114,10 +114,10 @@
                                     TRANG CHỦ
                                 </span>
                             </a>
-                            <a class="content__inner" href="./forum.html">
+                            <a class="content__inner" href="./chatbox.html">
                                 <i class='bx bx-world'></i>
                                 <span class="noidung__text1">
-                                    DIỄN ĐÀN
+                                    CHAT ONLINE
                                 </span>
                             </a>
                             <div class="submenu" href="#" onclick="toggleNoidung222(event)">
@@ -128,30 +128,15 @@
                                     </span>
                                 </b>
                                 <div class="noidung222">
-                                    <a class="content__inner" href="./card.html">
-                                        THẺ HỘI VIÊN
-                                    </a>
-                                    <a class="content__inner" href="./train.html">
-                                        HUẤN LUYỆN VIÊN
-                                    </a>
-                                    <a class="content__inner" href="./shop.html">
-                                        CỬA HÀNG WHEY
-                                    </a>
-                                    <a class="content__inner" href="./chatbox.html">
-                                        CHAT ONLINE
-                                    </a>
+                                    <a class="content__inner" href="./card.html"> THẺ HỘI VIÊN</a>
+                                    <a class="content__inner" href="./train.html"> HUẤN LUYỆN VIÊN</a>
+                                    <a class="content__inner" href="./shop.html"> CỬA HÀNG WHEY</a>
                                 </div>
                             </div>
                             <a class="content__inner" href="./promotion.html">
                                 <i class='bx bxs-purchase-tag'></i>
                                 <span class="noidung__text1">
                                     KHUYẾN MÃI
-                                </span>
-                            </a>
-                            <a class="content__inner" href="#">
-                                <i class='bx bx-code-alt'></i>
-                                <span class="noidung__text1">
-                                    TẬP THỬ MIỄN PHÍ
                                 </span>
                             </a>
                         </div>
