--- a/navigation/personal_training.html
+++ b/navigation/personal_training.html
@@ -14,21 +14,21 @@
     <link href="https://fonts.googleapis.com/css2?family=Overpass:wght@100;200;300;400;500;600;700;800;900&display=swap"
         rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="stylesheet" href="./font/fontawesome-free-6.4.0-web/css/all.min.css">
+    <link rel="stylesheet" href="../font/fontawesome-free-6.4.0-web/css/all.min.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="../css/base.css">
     <link rel="stylesheet" href="../css/header.css">
     <link rel="stylesheet" href="../css/footer.css">
     <link rel="stylesheet" href="../css/keyframes.css">
-    <link rel="stylesheet" href="../navigation_css/forum.css">
-    <!-- <link rel="stylesheet" href="../navigation_css/promotion.css"> -->
+    <link rel="stylesheet" href="../navigation_css/toast.css">
+    <link rel="stylesheet" href="../navigation_css/personal_training.css">
+    <link rel="stylesheet" href="../navigation_css/login.css">
     <title>GYMZ - Thể hình giới trẻ</title>
 
 </head>
 
 <body>
     <div class="app">
-        <!-- LUU SY TRUONG -->
         <div class="header">
             <div class="header__inner">
                 <div class="header__inner__logo">
@@ -40,26 +40,24 @@
                 <div class="header__inner__navigation">
                     <ul>
                         <li><a class="header__inner__navigation__sevice" href="../index.html">TRANG CHỦ</a></li>
-                        <li><a class="header__inner__navigation__sevice" href="./forum.html"><span>DIỄN ĐÀN</span></a></li>
+                        <li><a class="header__inner__navigation__sevice" href="./card.html">CHAT ONLINE</a></li>
                         <li>
                             <div class="dropdown">
                                 <a class="header__inner__navigation__sevice" href="#" onclick="yourFunction(event)">
                                     DỊCH VỤ<m><i class='bx bxs-right-arrow'></i></m>
                                 </a>
                                 <div class="containt">
-                                    <a href="./card.html">THẺ HỘI VIÊN</a>
                                     <a href="./train.html">HUẤN LUYỆN VIÊN</a>
                                     <a href="./shop.html">CỬA HÀNG WHEY</a>
-                                    <a href="./chatbox.html">CHAT ONLINE</a>
                               </div>
                             </div>
                         </li>
-                        <li><a class="header__inner__navigation__sevice" href="./promotion.html">KHUYẾN MÃI</a></li>
+                        <li><a class="header__inner__navigation__sevice" href="./chatbox.html">THẺ HỘI VIÊN</a></li>
                     </ul>
                 </div>
                 <div class="header__inner__try">
                     <ul>
-                        <li><a href="https://facebook.com/lst24">TẬP THỬ MIỄN PHÍ</a></li>
+                        <li><a href="./promotion.html">KHUYẾN MÃI NÈ</a></li>
                     </ul>
                 </div>
                 <div class="header__inner__menu">
@@ -91,10 +89,10 @@
                                     TRANG CHỦ
                                 </span>
                             </a>
-                            <a class="content__inner" href="./forum.html">
+                            <a class="content__inner" href="./chatbox.html">
                                 <i class='bx bx-world'></i>
                                 <span class="noidung__text1">
-                                    DIỄN ĐÀN
+                                    CHAT ONLINE
                                 </span>
                             </a>
                             <div class="submenu" href="#" onclick="toggleNoidung222(event)">
@@ -108,19 +106,12 @@
                                     <a class="content__inner" href="./card.html"> THẺ HỘI VIÊN</a>
                                     <a class="content__inner" href="./train.html"> HUẤN LUYỆN VIÊN</a>
                                     <a class="content__inner" href="./shop.html"> CỬA HÀNG WHEY</a>
-                                    <a class="content__inner" href="./chatbox.html"> CHAT ONLINE</a>
                                 </div>
                             </div>
                             <a class="content__inner" href="./promotion.html">
                                 <i class='bx bxs-purchase-tag'></i>
                                 <span class="noidung__text1">
                                     KHUYẾN MÃI
-                                </span>
-                            </a>
-                            <a class="content__inner" href="#">
-                                <i class='bx bx-code-alt'></i>
-                                <span class="noidung__text1">
-                                    TẬP THỬ MIỄN PHÍ
                                 </span>
                             </a>
                         </div>
@@ -130,11 +121,8 @@
         </div>
         <div class="container">
             <div class="container__inner">
-                <div class="container__inner__ntf">
-                    <h1>COMING SOON ..</h1>
-                    <a href="../index.html">
-                        <h1><i class='bx bx-home'></i></h1>
-                    </a>
+                <div class="container__inner__select">
+
                 </div>
             </div>
         </div>
@@ -235,10 +223,16 @@
             </div>
         </div>
     </div>
+    <div id="toast"></div>
+
     <!-- overlay -->
     <div class="nen_mo"></div>
-    <script src="./index.js"></script>
+
+    <script type="module" src="../navigation_javascript/loadData.js"></script>
+    <script type="module" src="../navigation_javascript/toast.js"></script>
     <script src="../navigation_javascript/menuv2.js"></script>
+    <script type="module" src="../navigation_javascript/information_account.js"></script>
+    <script type="module" src="../navigation_javascript/login.js"></script>
 </body>
 
 </html>
