--- a/navigation/train.html
+++ b/navigation/train.html
@@ -20,7 +20,7 @@
     <link rel="stylesheet" href="../css/header.css">
     <link rel="stylesheet" href="../css/keyframes.css">
     <link rel="stylesheet" href="../css/base.css">
-    <link rel="stylesheet" href="../css/van.css">
+    <link rel="stylesheet" href="../css/footer.css">
     <link rel="stylesheet" href="../navigation_css/train.css">
     <title>GYMZ - Thể hình giới trẻ</title>
 
@@ -89,10 +89,10 @@
                                     TRANG CHỦ
                                 </span>
                             </a>
-                            <a class="content__inner" href="./forum.html">
+                            <a class="content__inner" href="./chatbox.html">
                                 <i class='bx bx-world'></i>
                                 <span class="noidung__text1">
-                                    DIỄN ĐÀN
+                                    CHAT ONLINE
                                 </span>
                             </a>
                             <div class="submenu" href="#" onclick="toggleNoidung222(event)">
@@ -106,19 +106,12 @@
                                     <a class="content__inner" href="./card.html"> THẺ HỘI VIÊN</a>
                                     <a class="content__inner" href="./train.html"> HUẤN LUYỆN VIÊN</a>
                                     <a class="content__inner" href="./shop.html"> CỬA HÀNG WHEY</a>
-                                    <a class="content__inner" href="./chatbox.html"> CHAT ONLINE</a>
                                 </div>
                             </div>
                             <a class="content__inner" href="./promotion.html">
                                 <i class='bx bxs-purchase-tag'></i>
                                 <span class="noidung__text1">
                                     KHUYẾN MÃI
-                                </span>
-                            </a>
-                            <a class="content__inner" href="#">
-                                <i class='bx bx-code-alt'></i>
-                                <span class="noidung__text1">
-                                    TẬP THỬ MIỄN PHÍ
                                 </span>
                             </a>
                         </div>
