demo personal trainer

--- a/navigation/personal_trainer.html
+++ b/navigation/personal_trainer.html
@@ -124,7 +124,7 @@
             <div class="container__inner">
                 <div class="container__inner__select">
                     <video autoplay loop muted>
-                        <source src="../video/video_day_ne.mp4" type="video/mp4">
+                        <source src="../video/video_ne.mov" type="video/mp4">
                     </video>
                 </div>
             </div>
