--- a/navigation/personal_trainer.html
+++ b/navigation/personal_trainer.html
@@ -123,8 +123,8 @@
         <div class="container">
             <div class="container__inner">
                 <div class="container__inner__select">
-                    <video autoplay loop muted>
-                        <source src="../video/0308(1).mov" type="video/mp4">
+                    <video autoplay loop muted playsinline>
+                        <source src="../video/0308(2).mp4" type="video/mp4">
                     </video>
                 </div>
             </div>
