--- a/navigation/personal_trainer.html
+++ b/navigation/personal_trainer.html
@@ -120,12 +120,25 @@
                 </div>
             </div>
         </div>
+        <div class="video__title">
+            <div class="video__title__inner">
+                <video autoplay loop muted playsinline>
+                    <source src="../video/video_day.mp4" type="video/mp4">
+                </video>
+                <div class="shadow">
+                </div>
+                <h1 class="title">
+                    The top personal coach comes from CloseAI
+                </h1>
+            </div>
+        </div>
         <div class="container">
             <div class="container__inner">
                 <div class="container__inner__select">
-                    <video autoplay loop muted playsinline>
+                    <!-- <video autoplay loop muted playsinline>
                         <source src="../video/0308(2).mp4" type="video/mp4">
-                    </video>
+                    </video> -->
+                    hihi
                 </div>
             </div>
         </div>
