--- a/navigation/personal_trainer.html
+++ b/navigation/personal_trainer.html
@@ -13,6 +13,7 @@
         rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Overpass:wght@100;200;300;400;500;600;700;800;900&display=swap"
         rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Epilogue:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="stylesheet" href="../font/fontawesome-free-6.4.0-web/css/all.min.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
@@ -24,7 +25,13 @@
     <link rel="stylesheet" href="../navigation_css/personal_trainer.css">
     <link rel="stylesheet" href="../navigation_css/login.css">
     <title>GYMZ - Thể hình giới trẻ</title>
-
+    <style>
+        body{
+            background-image: url(../img/background/b.jpg);
+            background-size: cover;
+            background-attachment: fixed;
+        }
+    </style>
 </head>
 
 <body>
@@ -128,7 +135,7 @@
                 <div class="shadow">
                 </div>
                 <h1 class="title">
-                    The top personal coach comes from CloseAI
+                    huấn luyện viên hàng đầu tại GYMZ
                 </h1>
             </div>
         </div>
