--- a/navigation/promotion.html
+++ b/navigation/promotion.html
@@ -133,7 +133,7 @@
                         <img class="khbcaigiluon" src="../img/promotion/khbcaigiluon.png" alt="chiuu">
                         <img class="khbcaigiluon2" src="../img/promotion/khbcaigiluon.png" alt="chiuu">
                         <div class="container__colum1__inner2__box">
-                            <img src="../img/promotion/lucky.png" alt="" class="container__colum1__inner2__img">
+                            <img src="../img/promotion/lucky1.png" alt="" class="container__colum1__inner2__img">
                             <img src="https://w.ladicdn.com/source/spin-btn1.svg" onclick="startClick()" alt="" class="start__img">
                             
                         </div>
@@ -143,7 +143,7 @@
                     <div class="container__colum2__inner">
                         <div class="container__colum2__inner__select">
                             <div class="image__inner">
-                                <img class="anh__ico" src="../img/icon/thuy1_1-20230927065901-mn5tk.png" alt="anh">
+                                <img class="anh__ico" src="../img/icon/222.png" alt="anh">
                             </div>
                         </div>
                     </div>
