--- a/navigation/personal_trainer.html
+++ b/navigation/personal_trainer.html
@@ -41,7 +41,7 @@
                 <div class="header__inner__navigation">
                     <ul>
                         <li><a class="header__inner__navigation__sevice" href="../index.html">TRANG CHỦ</a></li>
-                        <li><a class="header__inner__navigation__sevice" href="./card.html">CHAT ONLINE</a></li>
+                        <li><a class="header__inner__navigation__sevice" href="./chatbox.html">CHAT ONLINE</a></li>
                         <li>
                             <div class="dropdown">
                                 <a class="header__inner__navigation__sevice" href="#" onclick="yourFunction(event)">
