--- a/navigation/personal_trainer.html
+++ b/navigation/personal_trainer.html
@@ -48,7 +48,7 @@
                                     DỊCH VỤ<m><i class='bx bxs-right-arrow'></i></m>
                                 </a>
                                 <div class="containt">
-                                    <a href="./train.html">HUẤN LUYỆN VIÊN</a>
+                                    <a href="./personal_trainer.html">HUẤN LUYỆN VIÊN</a>
                                     <a href="./shop.html">CỬA HÀNG WHEY</a>
                                     <a href="./card.html">THẺ HỘI VIÊN</a>
                               </div>
@@ -106,7 +106,7 @@
                                 </b>
                                 <div class="noidung222">
                                     <a class="content__inner" href="./card.html"> THẺ HỘI VIÊN</a>
-                                    <a class="content__inner" href="./train.html"> HUẤN LUYỆN VIÊN</a>
+                                    <a class="content__inner" href="./personal_trainer.html"> HUẤN LUYỆN VIÊN</a>
                                     <a class="content__inner" href="./shop.html"> CỬA HÀNG WHEY</a>
                                 </div>
                             </div>
