--- a/navigation/shop.html
+++ b/navigation/shop.html
@@ -54,7 +54,7 @@
                                     <span>DỊCH VỤ</span><m><i class='bx bxs-right-arrow'></i></m>
                                 </a>
                                 <div class="containt">
-                                    <a href="./train.html">HUẤN LUYỆN VIÊN</a>
+                                    <a href="./personal_trainer.html">HUẤN LUYỆN VIÊN</a>
                                     <a href="./shop.html"><span>CỬA HÀNG WHEY</span></a>
                               </div>
                             </div>
@@ -111,7 +111,7 @@
                                 </b>
                                 <div class="noidung222">
                                     <a class="content__inner" href="./card.html"> THẺ HỘI VIÊN</a>
-                                    <a class="content__inner" href="./train.html"> HUẤN LUYỆN VIÊN</a>
+                                    <a class="content__inner" href="./personal_trainer.html"> HUẤN LUYỆN VIÊN</a>
                                     <a class="content__inner" href="./shop.html"> CỬA HÀNG WHEY</a>
                                 </div>
                             </div>
