personal trainer interface design

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                                     DỊCH VỤ<m><i class='bx bxs-right-arrow'></i></m>
                                 </a>
                                 <div class="containt">
-                                    <a href="./navigation/train.html">HUẤN LUYỆN VIÊN</a>
+                                    <a href="./navigation/personal_trainer.html">HUẤN LUYỆN VIÊN</a>
                                     <a href="./navigation/shop.html">CỬA HÀNG WHEY</a>
                                 </div>
                             </div>
@@ -137,7 +137,7 @@
                                     <a class="content__inner" href="./navigation/card.html">
                                         THẺ HỘI VIÊN
                                     </a>
-                                    <a class="content__inner" href="./navigation/train.html">
+                                    <a class="content__inner" href="./navigation/personal_trainer.html">
                                         HUẤN LUYỆN VIÊN
                                     </a>
                                     <a class="content__inner" href="./navigation/shop.html">
