--- a/navigation/personal_trainer.html
+++ b/navigation/personal_trainer.html
@@ -23,8 +23,13 @@
     <link rel="stylesheet" href="../css/footer.css">
     <link rel="stylesheet" href="../css/keyframes.css">
     <link rel="stylesheet" href="../navigation_css/toast.css">
-    <link rel="stylesheet" href="../navigation_css/personal_trainer.css">
     <link rel="stylesheet" href="../navigation_css/login.css">
+    <link
+        rel="stylesheet"
+        type="text/css"
+        href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"
+      />
+    <link rel="stylesheet" href="../navigation_css/personal_trainer.css">
     <title>GYMZ - Thể hình giới trẻ</title>
 </head>
 
@@ -324,10 +329,120 @@
                     </div>
                     <div class="cheer__colum__two">
                         <div class="cheer__img">
-                            <img src="/img/personal-trainer/Untitled-2.png" alt="">
+                            <img src="/img/personal-trainer/Untitled-3.png" alt="">
                         </div>
                     </div>
                     <div class="shadow__cheer">
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="container3">
+            <div class="container3__select">
+                <div class="container3__title">
+                    <div class="title3__content">
+                        <h1>
+                            gặp gỡ các huấn luyện viên cá nhân hàng đầu tại closeai
+                        </h1>
+                    </div>
+                    <h3>
+                        Các huấn luyện viên cá nhân hàng đầu trong 
+                        ngành sẽ mang đến cho bạn trải nghiệm đào 
+                        tạo tuyệt vời. Họ là những chuyên gia hàng 
+                        đầu sẽ giúp bạn đạt được sự chuyển đổi mà 
+                        bạn mong muốn.
+                    </h3>
+                </div>
+                <div class="image__slider">
+                    <div class="image__item">
+                        <div class="image">
+                            <img src="/img/personal-trainer/hlv/quyen.png" alt="">
+                        </div>
+                        <div class="title-bar">
+                            <div class="name-person">
+                                quyen dev
+                            </div>
+                            <span class="job-name">
+                                Personal Trainer
+                            </span>
+                            <div class="view-more">
+                                <button class="bt-view">
+                                    xem thêm
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="image__item">
+                        <div class="image">
+                            <img src="/img/personal-trainer/hlv/tien.png" alt="">
+                        </div>
+                        <div class="title-bar">
+                            <div class="name-person">
+                                tien fullstack
+                            </div>
+                            <span class="job-name">
+                                Personal Trainer
+                            </span>
+                            <div class="view-more">
+                                <button class="bt-view">
+                                    xem thêm
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="image__item">
+                        <div class="image">
+                            <img src="/img/personal-trainer/hlv/tu.png" alt="">
+                        </div>
+                        <div class="title-bar">
+                            <div class="name-person">
+                                tu coder
+                            </div>
+                            <span class="job-name">
+                                Personal Trainer
+                            </span>
+                            <div class="view-more">
+                                <button class="bt-view">
+                                    xem thêm
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="image__item">
+                        <div class="image">
+                            <img src="/img/personal-trainer/hlv/truong.png" alt="">
+                        </div>
+                        <div class="title-bar">
+                            <div class="name-person">
+                                truong design
+                            </div>
+                            <span class="job-name">
+                                Personal Trainer
+                            </span>
+                            <div class="view-more">
+                                <button class="bt-view">
+                                    xem thêm
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="image__item">
+                        <div class="image">
+                            <img src="/img/personal-trainer/hlv/van.png" alt="">
+                        </div>
+                        <div class="title-bar">
+                            <div class="name-person">
+                                van tester
+                            </div>
+                            <span class="job-name">
+                                Personal Trainer
+                            </span>
+                            <div class="view-more">
+                                <button class="bt-view">
+                                    xem thêm
+                                </button>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -434,6 +549,20 @@
     <!-- overlay -->
     <div class="nen_mo"></div>
 
+
+
+    <script
+      type="text/javascript"
+      src="https://code.jquery.com/jquery-1.11.0.min.js"
+    ></script>
+    <script
+      type="text/javascript"
+      src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"
+    ></script>
+    <script
+      type="text/javascript"
+      src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"
+    ></script>
     <script type="module" src="../navigation_javascript/loadData.js"></script>
     <script type="module" src="../navigation_javascript/toast.js"></script>
     <script src="../navigation_javascript/menuv2.js"></script>
