--- a/navigation/admin.html
+++ b/navigation/admin.html
@@ -52,7 +52,7 @@
                                 <div class="containt">
                                     <a href="./personal_trainer.html">HUẤN LUYỆN VIÊN</a>
                                     <a href="./shop.html">CỬA HÀNG WHEY</a>
-                              </div>
+                                </div>
                             </div>
                         </li>
                         <li><a class="header__inner__navigation__sevice" href="./card.html">THẺ HỘI VIÊN</a></li>
@@ -176,7 +176,8 @@
                                     <i class="exit--search fa-solid fa-arrow-left"></i>
                                     <div class="list-message-box__find">
                                         <i class="fa-solid fa-magnifying-glass"></i>
-                                        <input type="text" class="search__message__input" placeholder="Tìm kiếm trên chatbox">
+                                        <input type="text" class="search__message__input"
+                                            placeholder="Tìm kiếm trên chatbox">
                                     </div>
                                 </div>
 
@@ -220,8 +221,10 @@
                                 <div class="chatbox__bottom">
                                     <div class="chatbox__bottom__link-social">
                                         <div class="chatbox__bottom__link-social__mess">
-                                            <a href="https://www.messenger.com/t/172967089240726/" class="chatbox__bottom__link-social__mess">
-                                                <img class="messenger_ico" src="/img/icon/messenger_ico.png" alt="messenger">
+                                            <a href="https://www.messenger.com/t/172967089240726/"
+                                                class="chatbox__bottom__link-social__mess">
+                                                <img class="messenger_ico" src="/img/icon/messenger_ico.png"
+                                                    alt="messenger">
                                                 <ul class="sub">
                                                     <span>chat với chúng tôi</span>
                                                     <i class='bx bxs-down-arrow'></i>
@@ -232,10 +235,10 @@
                                     <div class="chatbox__bottom__input">
                                         <!-- <input type="search" autocomplete="off"> -->
                                         <textarea id="myTextarea" rows="1" cols="20"></textarea>
-                                        <i class='bx bxs-send' ></i>
+                                        <i class='bx bxs-send'></i>
                                     </div>
                                 </div>
-                
+
                             </div>
                         </div>
 
@@ -252,11 +255,10 @@
                         </div>
                         <div class="container__show__head">
                             <div class="container__show__head__input__box">
+                                <i class="exit--search fa-solid fa-arrow-left"></i>
                                 <input class="show__input__id" type="text" oninput="findByIDAccount(this)"
-                                    placeholder="Nhập mã thẻ hoặc tên khách hàng">
-                                <div class="show__find__id__box">
-                                </div>
-                                </table>
+                                    placeholder="Nhập mã thẻ của khách hàng">
+                                <div class="show__find__id__box"></div>
                             </div>
                             <div class="head-end">
                                 <button class="container__show__find__btn">Tìm kiếm</button>
@@ -290,6 +292,7 @@
                         </div>
                         <div class="container__show__head container__show__card__head">
                             <div class="container__show__head__input__box container__show__card__head__input__box">
+                                <i class="exit--search fa-solid fa-arrow-left"></i>
                                 <input class="show__input__id" type="text" oninput="findByIDCard(this)"
                                     placeholder="Nhập mã thẻ hoặc tên khách hàng">
                                 <div class="show__find__id__box">
@@ -299,15 +302,16 @@
                             <div class="head-end">
                                 <select class="show__input__package" id="packet" name="packet">
                                     <option value="" disabled selected>Loại thành viên</option>
-                                    <option value="NORMAL">BEGINNER</option>
-                                    <option value="PRO">BASIC</option>
-                                    <option value="PROMAX">ADVENCE</option>
+                                    <option value="BEGINNER">BEGINNER</option>
+                                    <option value="BASIC">BASIC</option>
+                                    <option value="ADVENCE">ADVENCE</option>
                                 </select>
                                 <input id="input-date-start" class="show__input__date" type="text"
                                     placeholder="Ngày gia nhập">
                                 <input id="input-date-end" class="show__input__date" type="text"
                                     placeholder="Ngày hết hạn">
-                                <button class="container__show__find__btn container__show__card__find__btn">Tìm kiếm</button>
+                                <button class="container__show__find__btn container__show__card__find__btn">Tìm
+                                    kiếm</button>
                             </div>
                         </div>
                         <!-- <i class="remove-icon fa-solid fa-trash"></i> -->
@@ -341,6 +345,7 @@
                         </div>
                         <div class="container__show__head container__show__calendar__head">
                             <div class="container__show__head__input__box container__show__calendar__head__input__box">
+                                <i class="exit--search fa-solid fa-arrow-left"></i>
                                 <input class="show__input__id" type="text" oninput="findByIDCalendar(this)"
                                     placeholder="Nhập mã thẻ hoặc tên khách hàng">
                                 <div class="show__find__id__box">
